--- a/assets/mediaqueries.css
+++ b/assets/mediaqueries.css
@@ -23,7 +23,7 @@
 
   .card__container input {
     background-color: var(--violet-sec);
-    opacity: 0.4;
+    opacity: 0.6;
     height: 50px;
     color: var(--white);
     max-width: 300px;
@@ -39,7 +39,10 @@
     box-shadow: none;
   }
 
-  .div__text {
+  .div__question {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     top: 0;
     left: 0;
     text-align: center;
